mudando a interface do meu curriculo, adicionando div, foto, cor e fonte

--- a/curriculo-website/src/style.css
+++ b/curriculo-website/src/style.css
@@ -1,138 +1,35 @@
-*{
-    margin: 0;
-    padding: 0;
+:root {
+    font-family: "Alice", serif;
 }
-header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    background-image: url('./assets/images/fundo-header.jpg');
-    background-position: 200%;
-    width: 100%;
-    min-height: 250px;
+body{
+    background-image: url('/src/assets/images/fundo.jpg');
+    background-size: cover;
 }
-nav{
-    display: flex;
-    margin: 15px;
-    margin-top: -180px;
-    margin-left: -300px;
-}
-.link{
-    display: block;
-    padding: 25px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #583B76;
-    font-family:monospace;
-    font-weight: bold;
-    font-size: 14px;
-}
-.minha-foto{
-    display: flex;
-    border-radius: 50%;
-    margin-left: 100px;
-    object-fit: cover;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    padding: 0;
-}
-.info-group{
-    flex-direction: column;
-    text-align: center;
-    display: flex;
-    margin-right: 100px;
-    flex-shrink: 0;
-    
-}
-.info-group h1{
-    font-size: 20px;
-    font-family: cursive;
-    color: #E2869B;
-    border-bottom: 1px solid black;
-}
-.info-group p{
-    font-size: 12px;
-    margin-top: 10px;
-}
-.about-me{
-    flex-direction: column  ;
-    text-align: center;
-    display: flex;
-    margin-right: 100px;
-    flex-shrink: 0;
-    margin-top: 20px;
-    
-}
-.about-me h1{
-    font-size: 20px;
-    text-align: center;
-    font-family: cursive;
-    border-bottom: 1px solid black;
-    color: #E2869B;
-}
-.about-me p{
-    font-size: 12px;
-    margin-top: 10px;
-    text-align: justify;
-}
-.academic-group{
-    background-color: #ECD4EC;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-}
-.pt1{
-    margin-left: 250px;
-    border: 1px solid grey;
+
+#container{
+    width: 1100px;
+    background-color: #E2E3A9;
     border-radius: 20px;
-    padding: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
- }
- .pt1 li, p{
-    text-align: left; 
- }
- .pt1 li{
-    padding: 5px;
- }
-.pt2{
-    margin-right: 250px;
-}
-.skills-group{
-  background-image: url('./assets/images/fundo-header.jpg');
-  background-position: 200%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-}
-.skills-pt1{
-  margin-left: 250px;
-}
-.skills-pt2{
-  margin-right: 250px;
-}
-.hobbies-group{
-    background-color: #ECD4EC;
+    margin: 50px auto;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-}
-.hobbies-pt1{
-    margin-left: 250px;
- }
-.hobbies-pt2{
-    margin-right: 250px;
- }
-
-footer{
-    background-color: #FB7CCD;
-    text-align: center;
-    max-height: 100%;
 }
 
+#info-group{
+    margin: 100px 20px auto;
+    line-height: 10px;
+}
+
+#info-group h1{
+    color: #301406;
+    font-size: 60px;
+}
+
+#info-group p{
+    text-align: center;
+    font-size: 18px;
+}
+img{
+    width: 200px;
+    padding: 50px;
+    border-radius: 300px;
+}
