estilizando divs e adicionando informações, também adicionando curriculo em pdf

--- a/curriculo-website/src/style.css
+++ b/curriculo-website/src/style.css
@@ -1,16 +1,36 @@
 :root {
     font-family: "Alice", serif;
 }
+header{
+    margin: 20px;
+    display: flex; 
+    justify-content: end;
+}
+nav a{
+    padding: 10px;
+    margin-right: 20px;
+}
+.link{
+    text-decoration: none;
+    color: #301406;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+a:hover{
+    color: #7a5b3e;
+}
 body{
     background-image: url('/src/assets/images/fundo.jpg');
     background-size: cover;
 }
 
 #container{
-    width: 1100px;
+    max-width: 1100px;
     background-color: #E2E3A9;
     border-radius: 20px;
     margin: 50px auto;
+}
+.info{
     display: flex;
 }
 
@@ -32,4 +52,29 @@ img{
     width: 200px;
     padding: 50px;
     border-radius: 300px;
+    display: block;
+}
+#about-me{
+    border-top: 1px solid;
+    margin: auto 40px auto;
+}
+#about-me h2{
+    font-size: 25px;
+}
+#formacao-academica{
+    border-top: 1px solid;
+    margin: auto 40px auto;
+}
+#skills{
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid;
+    margin: auto 40px auto;
+}
+.soft-skills, .hard-skills{
+    margin: auto;
+}
+#profissional{
+    border-top: 1px solid;
+    margin: auto 40px auto;
 }
